<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_not_available">Sorry, %1$s is currently unavailable.</string>
    <string name="cancel">Cancel</string>
    <string name="copy_message_error_toast">There was an error copying the text to the clipboard.</string>
    <string name="copy_message_success_toast">Message text copied to clipboard.</string>
    <string name="date_format_month_day">MMM d</string>
    <string name="date_format_month_day_year">M/d/yy</string>
    <string name="date_time_format_long">"E, MMM d, yyyy 'at' h:mm a"</string>
    <string name="date_time_format_long_24">"E, MMM d, yyyy 'at' k:mm"</string>
    <string name="date_time_format_short">M/d/yy h:mm a</string>
    <string name="date_time_format_short_24">M/d/yy k:mm</string>
    <string name="day_1">%1$dDAY</string>
    <string name="day_n">%1$dDAYS</string>
    <string name="download_app">%1$s is currently not installed on your device. Would you like to install %2$s?</string>
    <string name="download_app_generic_partner">%1$s is currently not installed on your device. Please visit your preferred marketplace to install it.</string>
    <string name="duration_format_hours">"h 'hours,' m 'min,' s 'sec'"</string>
    <string name="duration_format_minutes">"m 'min,' s 'sec'"</string>
    <string name="duration_format_seconds">"s 'sec'"</string>
    <string name="edit">Edit</string>
    <string name="hr_1">%1$dHR</string>
    <string name="hr_n">%1$dHRS</string>
    <string name="loading">Loading…</string>
    <string name="min_1">%1$dMIN</string>
    <string name="min_n">%1$dMIN</string>
    <string name="month_1">%1$dMO</string>
    <string name="month_n">%1$dMOS</string>
    <string name="no">No</string>
    <string name="no_google_play_dialog_message">Google Play is not installed in your device. Please install it before continuing.</string>
    <string name="no_google_play_dialog_title">Google Play is not installed</string>
    <string name="no_handling_application_toast">Cannot find application(s) to handle action</string>
    <string name="ok">OK</string>
    <string name="photo_operation_choose_photo_text">Choose existing photo</string>
    <string name="photo_operation_take_photo_text">Take photo</string>
    <string name="photo_operation_take_video_text">Take video</string>
    <string name="sec_1">%1$dSEC</string>
    <string name="sec_n">%1$dSEC</string>
    <string name="short_time_format">h:mma</string>
    <string name="year_1">%1$dYR</string>
    <string name="year_n">%1$dYRS</string>
    <string name="yes">Yes</string>
    <string name="com_facebook_ads_learn_more">Learn More</string>
    <string name="com_facebook_skip_ad">Skip Ad</string>
    <string name="com_facebook_skip_ad_in">Skip Ad in</string>
    <string name="common.powered_by_bing">Powered by Bing&amp;trade;</string>
    <string name="hockeykit_crash_dialog_message">The app found information about previous crashes. Would you like to send this data to the developer?</string>
    <string name="hockeykit_crash_dialog_negative_button">Dismiss</string>
    <string name="hockeykit_crash_dialog_positive_button">Send</string>
    <string name="hockeykit_crash_dialog_title">Crash Data</string>
    <string name="hockeykit_download_failed_dialog_message">The update could not be downloaded. Would you like to try again?</string>
    <string name="hockeykit_download_failed_dialog_negative_button">Cancel</string>
    <string name="hockeykit_download_failed_dialog_positive_button">Retry</string>
    <string name="hockeykit_download_failed_dialog_title">Download Failed</string>
    <string name="hockeykit_status_dialog_title">Yahoo! Dogfood update</string>
    <string name="hockeykit_staus_text_error">Error checking for updates</string>
    <string name="hockeykit_staus_text_success">You are using the newest version</string>
    <string name="hockeykit_update_dialog_message">Show information about the new update?</string>
    <string name="hockeykit_update_dialog_negative_button">Dismiss</string>
    <string name="hockeykit_update_dialog_positive_button">Show</string>
    <string name="hockeykit_update_dialog_title">Update Available</string>
    <string name="yssdk_app_title">Yahoo Search</string>
    <string name="yssdk_cancel">Cancel</string>
    <string name="yssdk_clear_history_summary">Clear Search History</string>
    <string name="yssdk_clear_history_title">Clear History</string>
    <string name="yssdk_clear_history_warning_text">Are you sure?</string>
    <string name="yssdk_local_friday">Friday</string>
    <string name="yssdk_local_monday">Monday</string>
    <string name="yssdk_local_saturday">Saturday</string>
    <string name="yssdk_local_sunday">Sunday</string>
    <string name="yssdk_local_thursday">Thursday</string>
    <string name="yssdk_local_tuesday">Tuesday</string>
    <string name="yssdk_local_wednesday">Wednesday</string>
    <string name="yssdk_safe_search">Safe Search</string>
    <string name="yssdk_setting_search_title">Search Settings</string>
    <string name="yssdk_settings_about">About</string>
    <string name="back_button">Back</string>
    <string name="dismiss">Dismiss</string>
    <string name="home_screen">Home screen</string>
    <string name="lazy_onboarding_loading_message">"Aviate is preparing
your journey"</string>
    <string name="loading_fail_message">Something went wrong. Please try again later!</string>
    <string name="music_card">Music card</string>
    <string name="music_default_empty_message">Open any music app to get started</string>
    <string name="music_next_button">Next Song</string>
    <string name="music_notification_access_message">Click to control your music through Aviate</string>
    <string name="music_prev_button">Previous Song</string>
    <string name="music_setup">Setup</string>
    <string name="ok_got_it">Ok, got it</string>
    <string name="onboarding_button_start">Start</string>
    <string name="onboarding_ready_try_again">Try again</string>
    <string name="onboarding_set_aviate_home">"Select Aviate then set to 'Always' for the best experience"</string>
    <string name="onboarding_set_aviate_home_subtitle">"Don't worry, you can always change this later in settings"</string>
    <string name="onboarding_set_default_image">Set Aviate as your default home screen by selecting Aviate and choosing Always on the next screen</string>
    <string name="onboarding_video">Welcome to Aviate</string>
    <string name="onboarding_welcome_title">Simplify your phone</string>
    <string name="people_space_call">Make Call</string>
    <string name="people_space_text">Send Text</string>
    <string name="preparing_screenshot">Preparing screenshot…</string>
    <string name="search_apps">Search apps</string>
    <string name="search_apps_hint">App name</string>
    <string name="share_homescreen">SHARE HOMESCREEN</string>
    <string name="share_location">Share location</string>
    <string name="view_profile">View profile</string>
</resources>