<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.tul.aviator.ui.view.common.MaxLineTextView android:textSize="@dimen/onboarding_set_default_title" android:id="@id/onboarding_set_default_title" android:paddingLeft="@dimen/onboarding_title_padding_left_right" android:paddingRight="@dimen/onboarding_title_padding_left_right" android:layout_marginTop="@dimen/onboarding_set_default_top_margin" android:layout_marginBottom="@dimen/onboarding_set_default_bottom_margin" android:text="@string/onboarding_set_aviate_home" style="@style/OnboardingTitle" />
    <com.tul.aviator.ui.view.SetDefaultSampleView android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:contentDescription="@string/onboarding_set_default_image" />
    <com.tul.aviator.ui.view.common.MaxLineTextView android:textSize="13.0sp" android:textColor="#ff808080" android:id="@id/onboarding_change_in_settings" android:paddingLeft="@dimen/onboarding_title_padding_left_right" android:paddingRight="@dimen/onboarding_title_padding_left_right" android:layout_height="wrap_content" android:text="@string/onboarding_set_aviate_home_subtitle" style="@style/OnboardingSubtitle" />
    <com.tul.aviator.ui.view.AviateTextView android:id="@id/button" android:text="@string/ok_got_it" style="@style/OnboardingButton" />
</LinearLayout>