<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/container" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/logo" style="@style/OnboardingLogo" />
    <com.tul.aviator.ui.view.AviateTextView android:paddingLeft="@dimen/onboarding_title_padding_left_right" android:paddingRight="@dimen/onboarding_title_padding_left_right" android:text="@string/onboarding_welcome_title" style="@style/OnboardingTitle" />
    <ImageView android:paddingBottom="65.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/onboarding_v2_start" android:scaleType="centerCrop" android:layout_weight="1.0" android:contentDescription="@string/onboarding_video" />
    <TextView android:textStyle="italic" android:gravity="center" android:id="@id/footer_text" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/OnboardingText" />
    <com.tul.aviator.ui.view.AviateTextView android:id="@id/button" android:text="@string/onboarding_button_start" style="@style/OnboardingButton" />
</LinearLayout>