<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/local_hours_full" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/yssdk_local_monday" />
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:id="@id/local_monday_hours" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/yssdk_local_tuesday" />
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:id="@id/local_tuesday_hours" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/yssdk_local_wednesday" />
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:id="@id/local_wednesday_hours" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/yssdk_local_thursday" />
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:id="@id/local_thursday_hours" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/yssdk_local_friday" />
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:id="@id/local_friday_hours" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/yssdk_local_saturday" />
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:id="@id/local_saturday_hours" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/yssdk_local_sunday" />
        <TextView android:textSize="@dimen/yssdk_local_preview_text_size" android:textColor="@color/yssdk_black" android:id="@id/local_sunday_hours" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>