<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/search_badge" android:padding="14.0dip" android:visibility="gone" android:layout_width="@dimen/span1" android:layout_height="@dimen/span1" android:layout_marginRight="@dimen/neg_span1" android:src="@drawable/search_icon" android:scaleType="centerInside" android:tint="@color/dark50" android:contentDescription="@string/search_apps_hint" />
    <com.tul.aviator.ui.view.AviateEditText android:gravity="center_vertical" android:id="@id/app_search_text" android:paddingLeft="@dimen/span1" android:paddingRight="@dimen/span1" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:tint="@color/dark50" android:hint="@string/search_apps_hint" android:maxLines="1" android:layout_weight="1.0" android:inputType="textFilter" android:imeOptions="actionDone" style="@style/Aviate.EditText" />
    <ImageView android:id="@id/clear_btn" android:padding="10.0dip" android:visibility="gone" android:layout_width="@dimen/span1" android:layout_height="@dimen/span1" android:layout_marginLeft="@dimen/neg_span1" android:src="@drawable/x_icon" android:scaleType="centerInside" android:tint="@color/dark50" android:contentDescription="@string/dismiss" />
    <ImageView android:id="@id/search_btn" android:padding="10.0dip" android:layout_width="@dimen/span1" android:layout_height="@dimen/span1" android:src="@drawable/search_icon" android:tint="@color/dark50" android:contentDescription="@string/search_apps" />
</LinearLayout>