<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="bottom" android:background="?peopleBackground" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aviate="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@id/header" android:padding="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
            <com.tul.aviator.ui.view.ContactImageView android:id="@id/contact_picture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:contentDescription="@string/view_profile" />
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.tul.aviator.ui.view.AviateTextView android:textSize="17.0sp" android:textColor="?peopleTextDark" android:id="@id/contact_name" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="2" aviate:customFont="GothamNarrSSm-Book.otf" />
                <com.tul.aviator.ui.view.common.IconTextView android:textColor="?peopleTextLight" android:id="@id/view_profile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/action_profile" android:tint="?dark50" android:text="@string/view_profile" aviate:customFont="GothamNarrSSm-Book.otf" aviate:iconMargin="5.0dip" aviate:iconSize="12.0dip" />
            </LinearLayout>
        </LinearLayout>
        <com.tul.aviator.ui.view.common.BorderedLinearLayout android:orientation="horizontal" android:background="?borderOnElementsBackground" android:paddingTop="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" aviate:borderColor="?borderOnElementsBackground" aviate:borderTopWidth="@dimen/pixel1">
            <ImageButton android:id="@id/call_button" android:background="?peopleGreen" android:layout_marginRight="@dimen/pixel2" android:src="@drawable/people_phone" android:tint="@color/peoplePhoneTint" android:layout_weight="1.0" android:contentDescription="@string/people_space_call" style="@style/Aviate.PeopleDetailQuickActionButton" />
            <ImageButton android:id="@id/text_button" android:background="?peopleBlue" android:src="@drawable/people_message" android:tint="@color/peopleMessageTint" android:layout_weight="1.0" android:contentDescription="@string/people_space_text" style="@style/Aviate.PeopleDetailQuickActionButton" />
        </com.tul.aviator.ui.view.common.BorderedLinearLayout>
        <com.tul.aviator.ui.view.common.BorderedLinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" aviate:borderColor="?borderOnElementsBackground" aviate:avBorderWidth="@dimen/pixel2" aviate:borderLeftWidth="0.0dip" aviate:borderRightWidth="0.0dip">
            <com.tul.aviator.ui.view.common.IconTextView android:id="@id/share_location" android:padding="10.0dip" android:layout_width="fill_parent" android:src="@drawable/action_locate" android:text="@string/share_location" style="@style/Aviate.PeopleDetailButton" />
        </com.tul.aviator.ui.view.common.BorderedLinearLayout>
    </LinearLayout>
    <ImageView android:id="@id/close_button" android:src="@drawable/x_icon" android:tint="?dark50" android:contentDescription="@string/dismiss" style="@style/PeopleCornerButton" />
</FrameLayout>