<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/music_card"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:gravity="center" android:id="@id/imageContainer" android:layout_width="fill_parent" android:layout_height="@dimen/card_hero_image_height" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
        <ImageView android:id="@id/album_art" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/music_header" android:scaleType="centerCrop" />
        <com.yahoo.aviate.android.ui.view.CardSettingsButton android:layout_gravity="center|right|top" android:id="@id/settings_button" android:tint="@android:color/white" style="@style/AppTheme.CardSettingsButton" />
        <com.tul.aviator.ui.view.MusicBarsView android:layout_gravity="bottom|center|left" android:id="@id/music_bars_view" android:layout_width="20.0dip" android:layout_height="16.0dip" android:layout_margin="@dimen/card_basic_padding" />
        <ImageView android:layout_gravity="bottom|center|right" android:id="@id/client_icon" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_margin="@dimen/card_basic_padding" />
        <FrameLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/control_info" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/controls" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/m4">
                    <ImageButton android:id="@id/btn_prev" android:src="@drawable/music_previous" android:contentDescription="@string/music_prev_button" style="@style/Aviate.MusicControllerButton" />
                    <ImageButton android:id="@id/btn_play" android:src="@drawable/music_play" style="@style/Aviate.MusicControllerButton.Play" />
                    <ImageButton android:id="@id/btn_next" android:src="@drawable/music_next" android:contentDescription="@string/music_next_button" style="@style/Aviate.MusicControllerButton" />
                </LinearLayout>
                <com.yahoo.cards.android.ui.TypefaceTextView android:ellipsize="marquee" android:id="@id/music_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" style="@style/Cards.h1.OnImage" />
                <com.yahoo.cards.android.ui.TypefaceTextView android:ellipsize="marquee" android:id="@id/artist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" style="@style/Cards.h2.OnImage" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty_message_cont" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="?marginHgutterx2" android:layout_marginRight="?marginHgutterx2">
                <ImageView android:id="@id/center_music_icon" android:layout_width="45.0dip" android:layout_height="45.0dip" android:layout_marginBottom="@dimen/m4" android:src="@drawable/music_icon_default" android:scaleType="centerInside" />
                <com.yahoo.cards.android.ui.TypefaceTextView android:gravity="center" android:linksClickable="true" android:id="@id/empty_message_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/music_default_empty_message" style="@style/Cards.l1.OnImage" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/kit_kat_prompt_cont" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.tul.aviator.ui.view.AviateTextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/setup_button" android:background="@drawable/card_button_on_image" android:layout_marginBottom="@dimen/m4" android:text="@string/music_setup" android:drawablePadding="8.0dip" style="@style/AppTheme.Button" />
                <com.yahoo.cards.android.ui.TypefaceTextView android:gravity="center" android:id="@id/music_notification_access_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/music_notification_access_message" style="@style/Cards.l1.OnImage" />
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
    <view android:id="@id/apps_grid" android:background="@color/white" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/imageContainer" class="com.yahoo.aviate.android.cards.MusicCardView$MusicCardAppsGridLayout" />
</RelativeLayout>